                                    Display current date in dashboard
    * LDAP: Using asynchronous searches / added optional support for paginated
      searches (Can be enabled in connection settings)
    * LDAP: It is now possible to provide multiple failover servers, which are
      tried when the primary ldap server fails
    * Added option to enable browser scrollbar to the multisite sidebar (only
      via "sidebar_show_scrollbar = True" in multisite.mk 
    * Added option to disable automatic userdb synchronizations in multisite
    * Implemented search forms for most data tables
    * New icons in view footers: export as CSV, export as JSON
    * Availability: new columns for shortest, longest, average and count
    * LDAP: Supporting posixGroup with memberUid as member attribute
    * Editing localized strings (like the title) is now optional when cloning
      views or editing cloned views. If not edited, the views inherit the
      localized strings from their ancestors
    * Added simple problems Dashboard
    * New filter and column painter for current notification number (escalations)
    * Added new painters for displaying host tags (list of tags, single tag
    groups). All those painters are sortable. Also added new filters for tags.
    * FIX: better error message in case of exception in SNMP handling
    * FIX: Inventory screen: Now shows custom checks
    * FIX: Fixed locking problem of multisite pages related to user loading/saving
    * FIX: Fixed wrong default settings of view filters in localized multisite
    * FIX: line wrapping of logwatch entries

    WATO:
    * Allow to configure check-/retry_interval in second precision
    * vSphere secret is not shown to the user via WATO anymore
    * New rules for jolokia check (JVM): uptime, threads, sessions,
                                         requests, queue
    * Custom user attributes can now be managed using WATO